# Object-Detection-using-OpenCV-YOLO

./: CMakeLists.txt  README.md  batchprocess.cpp  batchprocess.h  compare.py  cppImplement.py  cppcompare.py  mdlEvaluation.py  modelcompare.py  py5m_res.txt  requirements.txt  test.py  yolo5class.py  yolov5.cpp  yolov5.py  yolov5class.cpp  yolov5class.h
compare results/: py5n_res.txt  py5s_res.txt
lib/: YOLO.exp  YOLO.lib  cpp5s_res.txt
original code/: yolov5.cpp  yolov5.py
scr/: load_annotation.py  readme
src/: load_annotation.py
src/evaluators/: coco_evaluator.py
src/utils/: converter.py  general_utils.py
